<resources>
    <string name="app_name">Weather App (Powered by NOAA)</string>
    <string name="my_location">My Location</string>
    <string name="add_location">Add Location</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
	<string name="action_stop_service">Stop Service</string>
	<string name="action_start_service">Start Service</string>
    <string name="action_senderror">Send Error</string>
    <string name="action_exit">Exit</string>
    <string name="separator">/</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search by city...</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="search">Search</string>
    <string name="cached_forecast">Forecast read from local cache</string>
    <string name="cached_observation">Observation read from local cache</string>
    <string name="not_available">N/A</string>
    <string name="wind_gust">Gusting to {0} {1}</string>
    <string name="observation_page_title">Current</string>
    <string name="hourlyforecast_page_title">Hourly</string>
    <string name="forecast_page_title">Forecast</string>
    <string name="discussion_page_title">Discussion</string>
    <string name="hazards_page_title">Watches/Warnings</string>
    <string name="skewt_page_title">SkewT</string>
    <string name="radar_page_title">Radar</string>
	<string name="satellite_page_title">Satellite</string>
    <string name="send_error_mailfrom">Mail From</string>
    <string name="send_error_title">Send Error</string>
    <string name="send_error_label">Send error information to the developer. I will get your device information and the application logs. Just write a brief description of the error. That will tell me if the problem is with the logic or with the User Interface components.</string>
    <string name="send_error_ok">Send</string>
    <string name="send_error_cancel">Cancel</string>
    <string name="settings_title">Settings</string>
	<string name="settings_title_scroll_message">Scroll down to see more settings and for the Save and Cancel button</string>	
    <string name="temperatureUnits">Temperature Units</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheitThenCelsius">F/C</string>
    <string name="celsiusThenFahrenheit">C/F</string>
    <string name="windSpeedUnits">Wind Speed Units</string>
    <string name="knots">Knots</string>
    <string name="milesPerHour">mph</string>
    <string name="kilometersPerHour">kph</string>
    <string name="pressureUnits">Pressure Units</string>
    <string name="inchesOfMercury">inches of mercury</string>
    <string name="kiloPascals">kPa</string>
    <string name="stationPressure">Station Pressure</string>
    <string name="visibilityUnits">Visibility Units</string>
    <string name="statuteMiles">statute miles</string>
    <string name="miles">miles</string>
    <string name="kilometers">kilometers</string>
    <string name="heightUnits">Height Units</string>
    <string name="feet">feet</string>
    <string name="meters">meters</string>
    <string name="save_settings">Save</string>
    <string name="cancel_settings">Cancel</string>
    <string name="latitudeN">N</string>
    <string name="latitudeS">S</string>
    <string name="longitudeW">W</string>
    <string name="longitudeE">E</string>
    <string name="elevationFeet">ft</string>
    <string name="elevationMeters">m</string>
    <string name="temperatureFahrenheit">F</string>
    <string name="temperatureCelsius">C</string>
    <string name="latitudeAbbreviation">Lat</string>
    <string name="longitudeAbbreviation">Lon</string>
    <string name="elevationAbbreviation">Elev</string>
    <string name="feelsLikeTemperatureFormat">(Feels Like {0})</string>
    <string name="forecastDate">Day</string>
    <string name="temperature">Temperature</string>
	<string name="visibility">Visibility</string>
	<string name="pressure">Pressure</string>
	<string name="dewPoint">Dew Point</string>
	<string name="humidity">Humidity</string>
	<string name="wind">Wind</string>
    <string name="pop">Precipitation</string>
    <string name="popMeaning">Percentage of the forecast area that will see at least some precipitation.</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="back">Back</string>
    <string name="textOnly">Text Only (no icons)</string>
    <string name="close">Close</string>
    <string name="hazardsInstructions">USE THE BACK BUTTON DISMISS</string>
    <string name="dateFormat">Date Format</string>
    <string name="timeFormat">Time Format</string>
	<string name="timeFormat24Hour">24 Hour</string>
	<string name="timeFormat12Hour">12 Hour</string>
    <string name="add_widget">Add widget</string>
	<string name="widgetFontColor">Widget Font Color</string>
    <string name="service_name">Weather Service</string>
	<string name="channel_name">WeatherChannel</string>
	<string name="channel_description">Weather Channel</string>
	<string name="showNextTime">Show this screen next time</string>
	<string name="newFeatures">New Features</string>
	<string name="newFeaturesScrollMessage">Scroll down if you do not see OK button</string>
	<string name="ok">OK</string>
	<string name="observation_error">An error occurred retrieving the observation reading from the NOAA API. This problem usually resolves in a few hours. In the meantime, you can use the search to try some nearby locations.</string>
	<string name="forecast_error">An error occurred retrieving the forecast from the NOAA API. This problem usually resolves in a few hours. In the meantime, you can use the search to try some nearby locations.</string>
    <string name="radarTotalMinutes">Total Hours Back for Radar Images</string>
    <string name="radarDelaySeconds">Delay in seconds for radar animation</string>
</resources>
