<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.datamagic.noaaweatherwidget.MainActivity">
    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/my_location"
        android:orderInCategory="100"
        android:title="@string/my_location"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
	<item
        android:id="@+id/action_start_stop_service"
        android:orderInCategory="100"
        android:title="@string/action_stop_service"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_senderror"
        android:orderInCategory="100"
        android:title="@string/action_senderror"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
