<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:background="#FFFFFF"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:id="@+id/newFeaturesLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TextView
				android:id="@+id/newFeaturesLabel"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="8px"
				android:paddingRight="8px"
				android:text="@string/newFeatures"
				android:textStyle="bold" />
			<TextView
				android:id="@+id/newFeaturesScrollMessageLabel"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="8px"
				android:paddingRight="8px"
				android:text="@string/newFeaturesScrollMessage"
				android:textStyle="bold" />				
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="8px"
				android:paddingRight="8px"
				android:text=""
				android:id="@+id/newFeatures" />				
			<CheckBox
				android:id="@+id/showNextTime"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/showNextTime"
				android:buttonTint="@color/colorPrimary"/>
			<RelativeLayout 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">		
				<Button
					android:id="@+id/ok"
					android:layout_width="65dp"
					android:layout_height="35dp"
					android:layout_centerInParent="true"
					android:text="@string/ok" />
			</RelativeLayout>
		</LinearLayout>
	</RelativeLayout>
</ScrollView>