<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="8px"
        android:paddingRight="8px"
        android:text="@string/send_error_label" />
    <EditText
        android:id="@+id/errorInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="5"
        android:paddingLeft="8px"
        android:paddingRight="8px"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:text="Text"
        android:textAlignment="gravity"
        tools:text=""
        android:textColor="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/sendErrorOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_error_ok" />
        <Button
            android:id="@+id/sendErrorCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_error_cancel" />
    </LinearLayout>
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendErrorProgress"
        android:progressDrawable="@drawable/circular_progress_bar"
        android:layout_gravity="center"
        android:visibility="gone"
        />
</LinearLayout>
